--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,8 +1,8 @@
 $primary-color: #444;
 $secondary-color: #eece1a;
-$show-home-image:true;
-$show-image: url(../img/background.jpg);
-$background-opacity:0.9;
+$show-home-image: true;
+$home-image: url(../img/background.jpg);
+$background-opacity: 0.9;
 
 /*html{
   font-size: 10px;
@@ -12,23 +12,60 @@ $background-opacity:0.9;
   transition: all 0.5s ease-out;
 }
 
-@mixin background{
+@mixin background {
   @if $show-home-image {
     &#bg-img {
-      background:$show-image;
-      background-attachment:fixed;
-      background-size:cover;
-      
-      &:after{
-        content: '';
+      background: $home-image;
+      background-attachment: fixed;
+      background-size: cover;
+
+      &:after {
+        content: "";
         position: absolute;
-        top:0;
-        right:0;
-        width:100%;
-        height:100%;
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
         z-index: -1;
-        background: rgba ($primary-color, $background-opacity);
+        background: rgba($primary-color, $background-opacity);
       }
     }
+  }
+}
+
+//Set Text color
+@function set-text-color ($color) {
+  @if (lightness($color)>40) {
+    @return #000;
+  } @else {
+    @return #fff;
+  }
+}
+
+//Media Queries
+@mixin mediaSm {
+  @media screen and (max-width: 500px) {
+    @content;
+  }
+}
+@mixin mediaSm {
+  @media screen and (max-width: 500px) {
+    @content;
+  }
+}
+@mixin mediaMd {
+  @media screen and (max-width: 768px) {
+    @content;
+  }
+}
+@mixin mediaLg {
+  @media screen and (min-width: 769px) and (max-width: 1170px) {
+    @content;
+  }
+}
+
+@mixin mediaXl {
+  @media screen and (min-width: 71171px) {
+    @content;
   }
 }
