final project changes

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -4,10 +4,6 @@ $show-home-image: true;
 $home-image: url(../img/background.jpg);
 $background-opacity: 0.9;
 
-/*html{
-  font-size: 10px;
-}*/
-
 @mixin easeOut {
   transition: all 0.5s ease-out;
 }
@@ -20,7 +16,7 @@ $background-opacity: 0.9;
       background-size: cover;
 
       &:after {
-        content: "";
+        content: '';
         position: absolute;
         top: 0;
         right: 0;
@@ -33,31 +29,28 @@ $background-opacity: 0.9;
   }
 }
 
-//Set Text color
-@function set-text-color ($color) {
-  @if (lightness($color)>40) {
+// Set Text Color
+@function set-text-color($color) {
+  @if (lightness($color) > 40) {
     @return #000;
   } @else {
     @return #fff;
   }
 }
 
-//Media Queries
+// Media Query Mixins
 @mixin mediaSm {
   @media screen and (max-width: 500px) {
     @content;
   }
 }
-@mixin mediaSm {
-  @media screen and (max-width: 500px) {
-    @content;
-  }
-}
+
 @mixin mediaMd {
   @media screen and (max-width: 768px) {
     @content;
   }
 }
+
 @mixin mediaLg {
   @media screen and (min-width: 769px) and (max-width: 1170px) {
     @content;
@@ -65,7 +58,7 @@ $background-opacity: 0.9;
 }
 
 @mixin mediaXl {
-  @media screen and (min-width: 71171px) {
+  @media screen and (min-width: 1171px) {
     @content;
   }
 }
