--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,3 +1,4 @@
+// Menu Button
 .menu-btn {
   position: absolute;
   z-index: 3;
@@ -14,18 +15,24 @@
     @include easeOut;
   }
 
+  // Rotate Into X With Menu Lines
   &.close {
     transform: rotate(180deg);
 
     .btn-line {
+      // Line 1 - Rotate
       &:nth-child(1) {
-        transform: rotate(45deg) translate (5px, 5px);
+        transform: rotate(45deg) translate(5px, 5px);
       }
+
+      // Line 2 - Hide
       &:nth-child(2) {
         opacity: 0;
       }
+
+      // Line 3 - Rotate
       &:nth-child(3) {
-        transform: rotate(-45deg) translate (7px, -6px);
+        transform: rotate(-45deg) translate(7px, -6px);
       }
     }
   }
@@ -35,8 +42,8 @@
 .menu {
   position: fixed;
   top: 0;
-  opacity: 0.9;
   width: 100%;
+  opacity: 0.9;
   visibility: hidden;
 
   &.show {
@@ -47,11 +54,11 @@
   &-nav {
     display: flex;
     flex-flow: column wrap;
-    width: 50%;
-    height: 100vh;
     align-items: center;
     justify-content: center;
     float: left;
+    width: 50%;
+    height: 100vh;
     overflow: hidden;
   }
 
@@ -64,26 +71,26 @@
     @include easeOut;
 
     &.show {
+      // Slide in from top
       transform: translate3d(0, 0, 0);
     }
   }
 
+  // Branding Side
   &-branding {
-    margin: 0;
-    padding: 0;
     background: $primary-color;
     transform: translate3d(0, 100%, 0);
     @include easeOut;
 
     &.show {
+      // Slide in from bottom
       transform: translate3d(0, 0, 0);
     }
 
     .portrait {
       width: 250px;
       height: 250px;
-      background: url("../img/portrait.jpg");
-
+      background: url("../img/shashank-min.jpg");
       border-radius: 50%;
       border: solid 3px $secondary-color;
     }
@@ -94,6 +101,7 @@
     @include easeOut;
 
     &.show {
+      // Slide in from right
       transform: translate3d(0, 0, 0);
     }
 
@@ -104,13 +112,13 @@
 
   .nav-link {
     display: inline-block;
-    padding: 1rem 0;
     position: relative;
     font-size: 30px;
+    text-transform: uppercase;
+    padding: 1rem 0;
     font-weight: 300;
     color: set-text-color($primary-color);
     text-decoration: none;
-    text-transform: uppercase;
     @include easeOut;
 
     &:hover {
@@ -119,8 +127,9 @@
   }
 }
 
+// Delay each nav item slide by 0.1s
 @for $x from 1 through 4 {
   .nav-item:nth-child(#{$x}) {
-    transition-delay: $x*0.1s;
+    transition-delay: $x * 0.1s;
   }
 }
