--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,15 +1,18 @@
+// Widescreens
 @include mediaXl {
   .projects {
     grid-template-columns: repeat(4, 1fr);
   }
 }
 
+// Desktops & Laptops
 @include mediaLg {
   .projects {
     grid-template-columns: repeat(3, 1fr);
   }
 }
 
+// Tablets & Small Laptops
 @include mediaMd {
   main {
     align-items: center;
@@ -25,6 +28,8 @@
   div.menu-branding {
     float: none;
     width: 100%;
+    min-height: 0;
+
     &.show {
       transform: translate3d(0, 0, 0);
     }
@@ -39,12 +44,12 @@
   .menu-branding {
     height: 25vh;
     transform: translate3d(100%, 0, 0);
-  }
 
-  .portrait {
-    background: url("../img/portrait_small.jpg");
-    width: 150px;
-    height: 150px;
+    .portrait {
+      background: url("../img/shashank-min.jpg");
+      width: 150px;
+      height: 150px;
+    }
   }
 
   .about-info {
@@ -58,9 +63,18 @@
   }
 }
 
+// Smartphones
 @include mediaSm {
-  main#home h1 {
-    margin-top: 10vh;
+  main {
+    padding: 2rem;
+    #home h1 {
+      margin-top: 10vh;
+    }
+
+    .lg-heading {
+      margin-top: 1rem;
+      font-size: 5rem;
+    }
   }
 
   .projects {
