--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,16 +6,16 @@
 }
 
 body {
-  @include background();
+  @include background;
   background: $primary-color;
-  color: #fff;
+  color: set-text-color($primary-color);
   height: 100%;
   margin: 0;
-  font-family: "Segoe UI", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.5;
 }
 
-//Headings
+// Headings
 h1,
 h2,
 h3 {
@@ -50,18 +50,18 @@ header {
 
 main {
   padding: 4rem;
-  //height: 100%;
-  min-height: calc(100vh-60px);
+  // height: 100%;
+  min-height: calc(100vh - 60px);
 
   .icons {
     margin-top: 1rem;
 
     a {
       padding: 0.4rem;
+      @include easeOut;
 
       &:hover {
         color: $secondary-color;
-        @include easeOut();
       }
     }
   }
@@ -78,13 +78,16 @@ main {
   display: grid;
   grid-gap: 30px;
   grid-template-areas: "bioimage bio bio" "job1 job2 job3";
-  grid-template-columns: repeat (3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
 
   .bio-image {
     grid-area: bioimage;
+    width: 150px;
+    height: 150px;
     margin: auto;
     border-radius: 50%;
     border: $secondary-color 3px solid;
+    display: inline-block;
   }
 
   .bio {
@@ -106,19 +109,19 @@ main {
 
   .job {
     background: lighten($primary-color, 5);
-    padding: 0.5 rem;
+    padding: 0.5rem;
     border-bottom: $secondary-color 5px solid;
   }
 }
 
-//work/Projects
+// Work/Projects
 .projects {
   display: grid;
-  grid-gap: 20px;
-  grid-template-columns: repeat (3, 1fr);
+  grid-gap: 0.7rem;
+  grid-template-columns: repeat(3, 1fr);
 
   img {
-    width: 100%; // 100% of the container
+    width: 100%;
     border: 3px #fff solid;
 
     &:hover {
@@ -129,7 +132,7 @@ main {
   }
 }
 
-//Contact PAge
+// Contact Page
 .boxes {
   display: flex;
   flex-wrap: wrap;
@@ -139,13 +142,14 @@ main {
 
   div {
     font-size: 2rem;
-    border: 3px white solid;
+    border: 3px #fff solid;
     padding: 1.5rem 2.5rem;
     margin-bottom: 3rem;
     @include easeOut;
+
     &:hover {
       padding: 0.5rem 1.5rem;
-      background: $seconday-color;
+      background: $secondary-color;
       color: set-text-color($secondary-color);
       span {
         color: set-text-color($secondary-color);
@@ -154,7 +158,7 @@ main {
   }
 }
 
-//Button styles
+// Button Styles
 .btn {
   display: block;
   padding: 0.5rem 1rem;
